# quelle

./: .gitignore  CLAUDE.md  LATENT.md  README.md  STATUS.md  plan.md  pyproject.toml
experiments/VVVVVV/: .gitignore  DECISIONS.md  README.md  RESULTS.md  colab.yaml  ve_implementation_plan.md
experiments/behavioral-projections/: .gitignore  DECISIONS.md  README.md  RESULTS.md
experiments/cln-iteration-dynamics/: README.md
experiments/crystal-lattice/: .gitignore  README.md  REVIEW.md  colab.yaml
experiments/curiosity-vs-random/: README.md
experiments/geometric-self-awareness-reasoning/: CONTEXT.md  README.md
experiments/mlp-context-steering/: .gitignore  DECISIONS.md  README.md  RESULTS.md
experiments/probe-signal-comparison/: README.md
experiments/projections/: HANDOFF-behavioral-projections.md  behavioral-projections-draft.md
experiments/translator-matrix-analysis/: .gitignore  DECISIONS.md  README.md
experiments/variable-bitrate-reasoning/: README.md  colab.yaml
experiments/vsa-encoding-fidelity/: README.md  RESULTS.md
tools/training/: colab_train.ipynb
wiki/: README.md
wiki/agents/: README.md  claude-opus-4-6.md  claude-sonnet-4-6.md
wiki/concepts/: behavioral-projections.md  constraint-forcing-function.md  dsd-future-prediction.md  factorization-taxonomy.md  geometric-self-awareness.md  gumbel-softmax.md  related-work.md  ris-scoring.md  uknown-neurons.org  variable-bitrate-compression.md
wiki/findings/: active-learning-low-budget-review.md  bisimulation-probe-prior-art.md  cross-model-behavioral-geometry.md  vvvvvv-reframe.md  (+9 more)
(+88 files in other folders)
