[project]
name = "quelle"
version = "0.1.0"
description = "Frontier research monorepo"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "transformers>=4.40",
    "tqdm>=4.60",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "datasets>=2.14",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["experiments"]
